made new commit

--- a/programToDevelop/programToDevelop/programToDevelop.csproj
+++ b/programToDevelop/programToDevelop/programToDevelop.csproj
@@ -8,12 +8,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{8099F035-C7B8-4697-9AE6-AD1D432805AA}</ProjectGuid>
+    <ProjectGuid>{3DAB578C-6912-483C-9D9B-6F2AE34A04DA}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>testCaseForGit</RootNamespace>
-    <AssemblyName>testCaseForGit</AssemblyName>
+    <RootNamespace>programToDevelop</RootNamespace>
+    <AssemblyName>programToDevelop</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
@@ -103,9 +103,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>5517</DevelopmentServerPort>
+          <DevelopmentServerPort>6120</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:5517/</IISUrl>
+          <IISUrl>http://localhost:6120/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
